--- a/src/styles/tasklist.scss
+++ b/src/styles/tasklist.scss
@@ -14,7 +14,7 @@ section.task-list {
     justify-content: space-between;
     
     h2 {
-      color: var(--text-title);
+      color: var(--text-blue);
       font-size: 2.25rem;
     }
 
